--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# --------------------------------------------------------
+### Datasource Configs - Postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/flight_search_api_db
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
 
